# cs6120_hw

./: README.md  Trace.json
cs6120task2/: mycfg.py  task2.txt
task12/: Trace.json  gpf.json  gpf_opt.json  injector.py  tracer.py
task2/: myfunc.py  task2.txt
task3/: dce.py  graph.py  result_lvn.csv  test_lvn(3).py  test_lvn(4).py
task4/: data_flow.py
task5/: dom.py
task6/: out.txt  to_ssa.py
task7/: Skeleton.cpp  a.c  rtlib.c
task8/: CMakeLists.txt  IndVarElim.cpp  ive.ll  m2r.ll  out.ll  output.txt  simp.ll  test.c  test.ll
